--- a/root/dnevnikUcitelj/public/assets/CSS/style2.css
+++ b/root/dnevnikUcitelj/public/assets/CSS/style2.css
@@ -1,3 +1,30 @@
+
+
+
+
+/* MENU */
+
+.menu{
+	background-color:#4caf50;
+	color:;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* PRIJAVA / REGISTRACIJA */
+
 .form-start{
 	width:300px;
 	margin-top:20px;
@@ -8,36 +35,12 @@
 	background-color:#D1D1D1;
 }
 
-
-#menu_list{
-	padding-top:0.5%;
-	padding-bottom:0.5%;
-	padding-left:5%;
-	background-color:#8CEE9F;
-}
-
-#menu_list li{
-	display:inline;
-	padding-right:3%;
-}
-#menu_list a{
-	text-decoration:none;
-	color:green;
-	font-weight:bold;
-	font-size:18px;
-}
-
-
 .register_error ul{
 	background-color:#E95050;
 	list-style-type:none;
 	font-style:italic;
 	text-align:center;
 	padding-right:30px;
-}
-
-body{
-	background-image:url("/images/external-content.duckduckgo.com.jpg");
 }
 
 #prijava_link{
