--- a/root/dnevnikUcitelj/public/assets/CSS/style.css
+++ b/root/dnevnikUcitelj/public/assets/CSS/style.css
@@ -33,12 +33,16 @@
 
 .form-start{
 	width:300px;
-	margin-top:20px;
+	margin-top:50px;
 	margin-left:auto;
 	margin-right:auto;
 	padding-top:10px;
 	padding-bottom:10px;
-	background-color:#D1D1D1;
+	background-color:white;
+	color:black;
+	border-radius:25px 25px 25px 25px;
+	border-style:solid;
+	border-color:#4caf50;
 }
 
 .register_error ul{
@@ -54,4 +58,7 @@
 	color:black;
 }
 
+#prijava_link:hover{
+	text-decoration:underline;
+}
 
