--- a/root/dnevnikUcitelj/public/assets/CSS/style.css
+++ b/root/dnevnikUcitelj/public/assets/CSS/style.css
@@ -1,7 +1,3 @@
-
-
-
-
 /* MENU */
 
 .menu{
@@ -16,6 +12,16 @@
 	color:black;
 }
 
+
+
+
+
+
+/* VNOS VSEBINE V FORMI */
+
+#vsebina{
+	height:200px;
+}
 
 
 
@@ -61,4 +67,3 @@
 #prijava_link:hover{
 	text-decoration:underline;
 }
-
