--- a/root/dnevnikUcitelj/public/assets/CSS/style2.css
+++ b/root/dnevnikUcitelj/public/assets/CSS/style2.css
@@ -1,12 +1,15 @@
-
-
-
-
 /* MENU */
 
 .menu{
 	background-color:#4caf50;
-	color:;
+}
+
+.vsebina{
+	color:white;
+}
+
+.menu .vsebina:hover{
+	color:black;
 }
 
 
@@ -14,11 +17,20 @@
 
 
 
+/* VNOS VSEBINE V FORMI */
+
+#vsebina{
+	height:200px;
+}
 
 
 
 
+/* Stran administratorja */
 
+.uporabnikiList{
+	widt:100%;
+}
 
 
 
@@ -27,12 +39,16 @@
 
 .form-start{
 	width:300px;
-	margin-top:20px;
+	margin-top:50px;
 	margin-left:auto;
 	margin-right:auto;
 	padding-top:10px;
 	padding-bottom:10px;
-	background-color:#D1D1D1;
+	background-color:white;
+	color:black;
+	border-radius:25px 25px 25px 25px;
+	border-style:solid;
+	border-color:#4caf50;
 }
 
 .register_error ul{
@@ -48,4 +64,6 @@
 	color:black;
 }
 
-
+#prijava_link:hover{
+	text-decoration:underline;
+}
