--- a/root/dnevnikUcitelj/public/assets/CSS/style.css
+++ b/root/dnevnikUcitelj/public/assets/CSS/style.css
@@ -1,3 +1,11 @@
+
+
+
+
+
+
+
+
 /* MENU */
 
 .menu{
@@ -13,8 +21,9 @@
 }
 
 
-
-
+.logout{
+	float:right !important;
+}
 
 
 /* VNOS VSEBINE V FORMI */
@@ -26,11 +35,11 @@
 
 
 
+/* Stran administratorja */
 
-
-
-
-
+.uporabnikiList{
+	widt:100%;
+}
 
 
 
