--- a/root/dnevnikUcitelj/public/assets/CSS/style2.css
+++ b/root/dnevnikUcitelj/public/assets/CSS/style2.css
@@ -1,4 +1,7 @@
-
+body
+{
+	background-color: white;
+}
 
 
 
@@ -9,20 +12,25 @@
 
 /* MENU */
 
-.menu{
-	background-color:#4caf50;
+.menu_celoten{
+	background-color: #28b867;
 }
 
-.vsebina{
-	color:white;
+.menu_vsebina_text{
+	color: white;
+	height: 100%;
 }
 
-.menu .vsebina:hover{
-	color:black;
+.menu_celoten .menu_vsebina_kvadrat:hover{
+	color: #05396B;
+	text-decoration: underline;
+	background-color: white;
+	height: 100%;
+	margin: 0;
 }
 
 
-.logout{
+#logout{
 	float:right !important;
 }
 
@@ -39,7 +47,7 @@
 /* Stran administratorja */
 
 .uporabnikiList{
-	widt:100%;
+	width:100%;
 }
 
 
@@ -62,7 +70,7 @@ label.zvezdica {
 }
 
 input.zvezdica:checked ~ label.zvezdica:before {
-  content: url('/public/assets/bootstrap-icons/star-fill.svg');
+  content: url('/assets/bootstrap-icons/star-fill.svg');
   color: #FD4;
   transition: all .25s;
 }
@@ -77,7 +85,7 @@ input.zvezdica-1:checked ~ label.zvezdica:before { color: #F62; }
 label.zvezdica:hover { transform: rotate(15deg) scale(1.3); }
 
 label.zvezdica:before {
-  content: url('/public/assets/bootstrap-icons/star.svg');
+  content: url('/assets/bootstrap-icons/star.svg');
 }
 
 
