--- a/root/dnevnikUcitelj/public/assets/CSS/style2.css
+++ b/root/dnevnikUcitelj/public/assets/CSS/style2.css
@@ -21,6 +21,8 @@ body
 	height: 100%;
 }
 
+
+/*
 .menu_celoten .menu_vsebina_kvadrat:hover{
 	color: #05396B;
 	text-decoration: underline;
@@ -28,6 +30,7 @@ body
 	height: 100%;
 	margin: 0;
 }
+*/
 
 
 #logout{
