--- a/root/dnevnikUcitelj/public/assets/CSS/style2.css
+++ b/root/dnevnikUcitelj/public/assets/CSS/style2.css
@@ -9,7 +9,7 @@ body
 {
 	float: left;
 	width: 75%;
-	margin-left: 20%;
+	margin-left: max(200px,20%);
 	min-width: 750px;
 }
 
@@ -53,7 +53,7 @@ body
 	color: white;
 	padding: 20px;
 	float: left;
-	padding-left: 20%;
+	padding-left: max(200px, 20%);
 }
 
 
@@ -109,16 +109,7 @@ label.zvezdica {
 
 input.zvezdica:checked ~ label.zvezdica:before {
   content: url('/assets/bootstrap-icons/star-fill.svg');
-  color: #FD4;
-  transition: all .25s;
 }
-
-input.zvezdica-5:checked ~ label.zvezdica:before {
-  color: #FE7;
-  text-shadow: 0 0 20px #952;
-}
-
-input.zvezdica-1:checked ~ label.zvezdica:before { color: #F62; }
 
 label.zvezdica:hover { transform: rotate(15deg) scale(1.3); }
 
@@ -153,6 +144,11 @@ label.zvezdica:before {
 .ocena_zvezdica
 {
 	transform: scale(1.5);
+}
+.izpisek_vsebina_2
+{
+	max-height: 220px;
+	overflow: hidden;
 }
 
 
@@ -195,6 +191,7 @@ label.zvezdica:before {
 {
 	width: 100%;
 	clear: both;
+	float: left;
 }
 
 /*	Obroba za dva izpiska v eni vrsti	*/
